# spectral-clustering

./: pyproject.toml
src/spectral-clustering/data/: datasets.py
src/spectral-clustering/models/autoencoders/: __init__.py  base.py  ff_ae.py  vae.py
src/spectral_clustering/data/: __init__.py  datasets.py  helpers.py
src/spectral_clustering/graphs/: __init__.py  constructors.py  kernels.py
src/spectral_clustering/models/autoencoders/: ff_ae.py  vae.py
src/spectral_clustering/models/spectral/: base.py
src/spectral_clustering/training/: __init__.py  ae_trainer.py  losses.py
