[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-clustering"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "scipy",
  "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["src"]